--- a/Fatih_Furkan_Has_141101024.ipynb
+++ b/Fatih_Furkan_Has_141101024.ipynb
@@ -1589,11 +1589,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "If we compare these three models, random forest have highest variance and SVM have lowest variance. "
+   ]
   },
   {
    "cell_type": "code",
