--- a/Fatih_Furkan_Has_141101024.ipynb
+++ b/Fatih_Furkan_Has_141101024.ipynb
@@ -1592,7 +1592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we compare these three models, random forest have highest variance and SVM have lowest variance. "
+    "If we compare these three models, random forest have highest variance and SVM have lowest variance. Neural network has lowest bias, and SVM have highest bias."
    ]
   },
   {
